<resources>
    <string name="app_name">Inventory</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Inventory</string>
    <string name="empty_view_title_text">No Thing is Found here....</string>
    <string name="empty_view_subtitle_text">Get started by adding a Items</string>
    <string name="editor_activity_title_new_inventory">Add Items</string>
    <string name="editor_activity_title_edit_inventory">Edit Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_inventory_successful">Item saved</string>
    <string name="editor_insert_inventory_failed">Error with saving Item</string>
    <string name="editor_update_inventory_successful">Item updated</string>
    <string name="editor_update_inventory_failed">Error with updating Item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_inventory_successful">Item deleted</string>
    <string name="editor_delete_inventory_failed">Error with deleting Item</string>
    <string name="delete_dialog_msg">Delete this Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Overview</string>
    <string name="category_gender">Gender</string>
    <string name="category_measurement">Measurement</string>
    <string name="hint_inventory_name">Name</string>
    <string name="hint_inventory_quantity">Quantity</string>
    <string name="hint_inventory_weight">Weight</string>
    <string name="unit_inventory_weight">kg</string>
    <string name="grade_unknown">Unknown</string>
    <string name="grade_new">New</string>
    <string name="grade_used">Used</string>
    <string name="unknown_breed">Unknown breed</string>
    <string name="hint_email_address">Supplier@gmail.com</string>
    <string name="select_image">Select Image</string>
    <string name="image">Image</string>
    <string name="supplier_email_title">Supplier Email</string>
    <string name="supplier_phone_hint">+20 000 000 0000 </string>
    <string name="supplier_phone_title">Supplier Phone</string>
    <string name="supplier_name_title">Supllier Name</string>
    <string name="supplier_name_hint">Younan Adly</string>
    <string name="quantity_title">Quantitiy</string>
    <string name="price_title">Price</string>
    <string name="product_name_title">Product Name</string>
    <string name="sale_button">Sale</string>
    <string name="productName">Headphone</string>
    <string name="priceProduct">35$</string>
    <string name="quantityProduct">100</string>

    <string name="quantity_not_found">No More Quantity</string>
</resources>